# ipeds_crawler

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/ipeds_crawler/: browser.py  cli.py  config.py  extractors.py  ipeds_pages.py  logging.py  normalize.py  orchestrator.py  retry.py
