[project]
name = "ipeds-crawler"
version = "0.1.0"
description = "Async Playwright crawler for NCES/IPEDS reported data (packaged from scripts)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hai Nguyen", email = "ngochai7729@gmail.com" }]

dependencies = [
  "playwright",
  "pandas",
  "rich"
]

[project.scripts]
ipeds-crawler = "ipeds_crawler.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E","F","I","UP","B","SIM"]
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings"
testpaths = ["tests"]
